<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_editor_password"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/nowPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/text_now_password"/>

    <EditText
        android:id="@+id/newPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_new_password"/>

    <EditText
        android:id="@+id/newpass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/mcompassword"/>

    <Button
        android:id="@+id/update_password"
        android:background="@drawable/button_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_editor_password"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_update_password_email"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/et_emial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/et_email"/>

    <Button
        android:id="@+id/update_password_email"
        android:background="@drawable/button_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_editor_password"
        android:textColor="@android:color/white"/>

</LinearLayout>