<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/et_username"
        android:hint="@string/username"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <Button
        android:id="@+id/mlogin"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/mlogup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/logup"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_margin="10dp">-->
        <!--<TextView-->
            <!--android:id="@+id/text_forget"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="end"-->
            <!--android:text="@string/text_forget_password"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--/>-->
    <!--</LinearLayout>-->



</LinearLayout>