<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.7"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/text_picture"
        android:text="@string/text_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.7"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/text_camera"
        android:text="@string/text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.7"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>


    <TextView
        android:id="@+id/text_cancel"
        android:text="@string/text_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.7"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>




</LinearLayout>