<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/mv_baidu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
        <EditText
            android:id="@+id/et_fromlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/et_fromlocation"
            android:text="@string/et_mylocation"
            android:layout_marginBottom="20dp"
            android:background="@android:color/white"/>
        <EditText
            android:id="@+id/et_tolocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_tolocation"
            android:background="@android:color/white"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_swin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_playback_repeat"
            android:clickable="true"
            android:layout_margin="20dp"/>

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_search"
            android:clickable="true"/>


    </LinearLayout>

</FrameLayout>